--- a/project/templates/loginabout.html
+++ b/project/templates/loginabout.html
@@ -153,7 +153,7 @@
     <div class="video-area section-bg2 d-flex align-items-center"  data-background="{% static 'assets/img/gallery/video-bg.png' %}">
         <div class="video-wrap position-relative">
             <div class="video-icon" >
-                <a class="btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0 " target="_blank"><i class="fas fa-play"></i></a>
+                <a class="btn-icon" href="https://youtu.be/KQIvKVgEy2Y?si=wxhBAulbVtWzak57" target="_blank"><i class="fas fa-play"></i></a>
             </div>
         </div>
     </div>
